5.1.7 -> 5.1.8:
    - jbj: backport rpmspecdump from HEAD.
    - jbj: lib: more random line noise reduction, diff'ing against HEAD.
    - jbj: delete ancient header+payload RSA signatures too using GPG (#488953).
    - jbj: rpmrepo: compile in queryformat strings.
    - jbj: install/use deb:{md5sums,preinst,postinst,prerm,postrm} queryformats.
    - jbj: install/use yum:{primary,filelists,other}.sqlite queryformats.
    - jbj: install/use yum:{primary,filelists,other}.xml queryformats.
    - jbj: install/use wnh:{primary,filelists,other}.yaml queryformats.
    - jbj: use poptReadFile with retrofit for popt < 1.15.
    - devzero2000: fix --orphandirs port alias ; add --danglinglink popt alias
    - jbj: fix: eliminate a argvSplit() memory leak.
    - jbj: stub-in /usr/lib/rpm/helpers/makeshlibs proof-of-concept.
    - jbj: rude & crude backing store for --queryformat templates.
    - jbj: PLD: rpm-popt-aliases: Add --downgrade/--norepackage aliases.
    - jbj: PLD: rpm-notsc: Don't use rdtsc timing.
    - jbj: enable the PLD dependency filtering.
    - jbj: PLD: rpm-pld-autodep: add run-time disablers, attempt miRE's instead.
    - jbj: PLD: rpm-pld-autodep: merge and simplify. entirely dysfunctional ...
    - jbj: lib: start reducing random line noise, diff'ing against HEAD.
    - jbj: add prototypes to remove compiler warnings.
    - jbj: bury file actions into iosm, replace XFA_SKIPPING with a
        iosmFileActionSkipped() call.
    - jbj: rpmdb: random line noise reduction, diff'ing against HEAD.
    - jbj: wire-up RPMTAG_FILEDIGESTALGO. wotta waste to pretend "compatible" ...
    - jbj: yaml: add build scriptlet tags for --yaml/--xml display.
    - jbj: eliminate rpmal debugging code.
    - jbj: PLD: rpm-epoch0: Always add Epoch: 0 to packages.
    - jbj: handle "config(N) = E:V-R" within rpmns.c (but treat as a string).
    - jbj: yaml: backport the YAML analogue tag extensions to repo-md XML.