@@ -1,4 +1,6 @@
 5.1.7 -> 5.1.8:
+    - jbj: rpmio: add additional data elements for HTTP transport.
+    - jbj: rpmiob: yet another place to use rpmiobSlurp instead.
     - jbj: backport rpmspecdump from HEAD.
     - jbj: lib: more random line noise reduction, diff'ing against HEAD.
     - jbj: delete ancient header+payload RSA signatures too using GPG (#488953).
